# monei-task

./: .gitignore  README.md  build.sh  llm_providers.py  pyproject.toml  render.yaml  requirements.txt  server.py
speech_to_text/: __init__.py  __main__.py  collector.py  pipeline.py  processor.py  yarngpt_tts.py
static/: index.html
static/css/: styles.css
static/js/: app.js
